feat: ajout reconnaissance faciale complete